# DongLang

./: .gitignore  CMakeLists.txt  DongLang.sln  DongLang.vcxproj  README.md  WslSSH.bat  dl_version.h  main.cpp  run.sh  tmp.dl  tmp.ll
backend/: DLGen.cpp  DLGen.h  GenBase.cpp  GenBase.h  PassConfig.def
backend/pass/: CMakeLists.txt  CustomPass.cpp  CustomPass.h  FunctionSymbolPass.cpp  FunctionSymbolPass.h  Pass.h  PassConfig.def  README.md  cmake.sh  run_pass_plugin.sh
backend/pass/FunctionSymbol/: CMakeLists.txt  FunctionSymbolPass.cpp  FunctionSymbolPass.h
font/: DongLangDbg.cpp  DongLangDbg.h  DongLangScope.cpp  DongLangScope.h  DongLangSymbol.cpp  DongLangSymbol.h  DongLangType.cpp  DongLangType.h
font/antlr4/: DongLang.g4  DongLangLLVMBaseListener.cpp  DongLangLLVMBaseListener.h  DongLangLLVMExprTypeListener.cpp  DongLangLLVMExprTypeListener.h  DongLangLLVMListener.cpp  DongLangLLVMListener.h  DongLangLLVMVarListener.cpp  DongLangLLVMVarListener.h
font/ast/: DongLangArrayAST.cpp  DongLangArrayAST.h  DongLangBaseAST.cpp  DongLangBaseAST.h  DongLangCondAST.cpp  DongLangCondAST.h  DongLangExprAST.cpp  DongLangExprAST.h  DongLangExpressionAST.cpp  DongLangExpressionAST.h  DongLangFunctionDefAST.cpp  DongLangFunctionDefAST.h  DongLangPrimaryAST.cpp  DongLangPrimaryAST.h  DongLangProgAST.cpp  DongLangProgAST.h  DongLangVarAST.cpp  DongLangVarAST.h
font/custom/: Lexer.h
include/: default_lib.h  dl_flag.h  dl_version.h
src/: dl_flag.cpp
test/: cond_if_for_test.dl  function_test.dl  ll_test.cpp  ll_test.ll  type_test.dl
test/cpp/: ll.sh  ll_test.cpp  test.cpp
test/eg/: debug.cpp
test/study/: pass_test.cpp  run.sh  run_pass_test.sh
